# formulation-bench

./: .gitignore  .readthedocs.yaml  AGENTS.md  Makefile  README.md  codecov.yml  pyproject.toml
.claude/agents/: milp-formulator.md  milp-reformulation-autoformalizer.md  milp-reviewer.md
.claude/skills/lean-milp-formulation/: SKILL.md  template.lean
.claude/skills/lean-milp-reformulation/: SKILL.md  template.lean
.github/workflows/: ci.yml  release-dataset.yml  release.yml
dataset/: .gitignore  .huggingfaceignore  AGENTS.md  Common.lean  README.md  dataset.json  lake-manifest.json  lakefile.toml  pairs.json
dataset/equivalences/p1/: a_b.lean  a_d.lean  a_e.lean  a_f.lean  a_g.lean
dataset/equivalences/p10/: a_b.lean  a_c.lean  a_d.lean  a_e.lean
dataset/equivalences/p11/: a_b.lean  a_c.lean  a_d.lean  a_e.lean  a_f.lean  a_g.lean  a_h.lean  a_i.lean
dataset/equivalences/p12/: a_b.lean  a_c.lean  a_g.lean  a_h.lean  a_i.lean
dataset/equivalences/p14/: a_b.lean
dataset/equivalences/p16/: a_b.lean
dataset/equivalences/p18/: a_b.lean
dataset/equivalences/p19/: a_b.lean
dataset/equivalences/p2/: a_b.lean  a_d.lean  a_e.lean  a_f.lean  a_g.lean
dataset/equivalences/p20/: a_b.lean
dataset/equivalences/p3/: a_b.lean  a_d.lean  a_e.lean  a_f.lean  a_g.lean
dataset/equivalences/p4/: a_b.lean  a_d.lean  a_e.lean  a_f.lean  a_g.lean
dataset/equivalences/p5/: a_b.lean  a_d.lean  a_e.lean  a_f.lean  a_g.lean
dataset/equivalences/p6/: a_b.lean  a_c.lean  a_d.lean  a_e.lean  a_f.lean  a_g.lean  a_h.lean  a_i.lean  a_j.lean
dataset/equivalences/p7/: a_d.lean  a_e.lean  a_f.lean  a_g.lean  a_h.lean  a_i.lean
dataset/equivalences/p8/: a_b.lean  a_c.lean  a_d.lean
dataset/equivalences/p9/: a_b.lean  a_c.lean  a_d.lean
dataset/problems/1/: problem.json
dataset/problems/10/: data.json  description.md  problem.json  solution.json
dataset/problems/11/: data.json  gen_data.py  problem.json
dataset/problems/12/: gen_data.py  problem.json
dataset/problems/14/: problem.json
dataset/problems/19/: problem.json
dataset/problems/2/: problem.json
dataset/problems/3/: description.md  problem.json
dataset/problems/4/: data.json  description.md  problem.json  solution.json
dataset/problems/5/: problem.json
dataset/problems/6/: problem.json  solution.json
dataset/problems/7/: data.json  problem.json
dataset/problems/8/: data.json  description.md  gen_data.py  problem.json  solution.json
dataset/problems/9/: data.json  description.md  gen_data.py  problem.json  solution.json
dataset/problems/p1/: problem.json  solution.json
dataset/problems/p10/: data.json  gen_data.py  gen_data_mps.py  problem.json  solution.json
dataset/problems/p11/: description.md  gen_data.py  problem.json  solution.json
dataset/problems/p12/: data.json  description.md  gen_data.py  problem.json  solution.json
dataset/problems/p13/: data.json  gen_data.py  problem.json  solution.json
dataset/problems/p14/: data.json  gen_data.py  problem.json
dataset/problems/p15/: data.json  gen_data.py  problem.json  solution.json
dataset/problems/p16/: data.json  gen_data.py  problem.json
dataset/problems/p17/: data.json  gen_data.py  problem.json  solution.json
dataset/problems/p18/: data.json  gen_data.py  problem.json  solution.json
dataset/problems/p19/: data.json  gen_data.py  problem.json  solution.json
dataset/problems/p2/: data.json  problem.json  solution.json
dataset/problems/p20/: data.json  gen_data.py  problem.json  solution.json
dataset/problems/p3/: data.json  problem.json  solution.json
dataset/problems/p4/: problem.json
docs/: api.md  conf.py  definitions.md  index.md  installation.md  schema.md  serve.sh
docs/_ext/: gen_problem_pages.py
docs/api/: codegen.md  dataset.md  download.md  formulation.md  index.md  models.md  pair.md  problem.md  reformulation.md
docs/dataset/: index.md  notes.md  problems.md
docs/lean/: formulation.md  index.md  reformulation.md
docs/user_guide/: add_formulation.md  add_problem.md  build_lean.md  check_reformulation.md  download.md  index.md
python/formulation_bench/: __init__.py  codegen.py  formulation.py  problem.py
scripts/: gen_hf_dataset.py  validate_evocut_problems.py  validate_solve.py
src/formulation_bench/: __init__.py  _codegen.py  _render.py  codegen.py  dataset.py  download.py  formulation.py  models.py  pair.py  problem.py  reformulation.py
tests/: conftest.py  test_codegen.py  test_dataset.py  test_formulation.py  test_models.py  test_pair.py  test_problem.py  test_reformulation.py
(+888 files in other folders)
