[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "formulation-bench"
version = "0.1.0"
description = "Utilities for working with the FormulationBench dataset."
requires-python = ">=3.10"
dependencies = ["jinja2>=3"]

[project.optional-dependencies]
docs = [
    "sphinx>=7",
    "myst-parser>=3",
    "furo",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild",
    "numpydoc",
]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
formulation_bench = ["py.typed", "templates/*.j2"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
files = ["src/formulation_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
