[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "formulation-bench"
version = "0.3.0"
description = "Utilities for loading and working with the FormulationBench dataset."
readme = "README.md"
authors = [{ name = "Henry Robbins", email = "hwr@stanford.edu" }]
license = "MIT"
license-files = ["LICENSE.md"]
keywords = ["milp", "optimization", "lean", "dataset", "formulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.10"
dependencies = ["jinja2>=3"]

[project.urls]
Homepage = "https://formulation-bench.henryrobbins.com"
Documentation = "https://formulation-bench.henryrobbins.com"
Repository = "https://github.com/henryrobbins/formulation-bench"
Issues = "https://github.com/henryrobbins/formulation-bench/issues"

[project.optional-dependencies]
docs = [
    "sphinx>=7",
    "myst-parser>=3",
    "furo",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild",
    "sphinx-design",
    "numpydoc",
]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    # Used by the codegen solve tests and the dataset validation scripts.
    "gurobipy",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
formulation_bench = ["py.typed", "templates/*.j2"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
files = ["src/formulation_bench"]

[tool.pytest.ini_options]
testpaths = ["tests", "src/formulation_bench"]
addopts = "--doctest-modules"
